// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/actionsList can be rendered with array of actions typed as shapes 1`] = `
<div
  className="mrb-sublist mdl-color--white"
  style={
    Object {
      "margin": "8px",
    }
  }
>
  <div
    className="mrb-subheader"
    onClick={[Function]}
    style={
      Object {
        "height": "64px",
        "paddingTop": "4px",
        "transition": "height 150ms cubic-bezier(0.4, 0, 0.2, 1) 0ms",
      }
    }
  >
    <div
      style={
        Object {
          "float": "right",
          "height": "48px",
          "width": "48px",
        }
      }
    >
      <i
        className="mrb-subheader-right material-icons"
        disabled={false}
        style={
          Object {
            "animation": null,
            "fontSize": "24px",
            "paddingTop": "8px",
            "textAlign": "center",
          }
        }
      >
        keyboard_arrow_up
      </i>
    </div>
    <div
      style={
        Object {
          "display": "flex",
        }
      }
    >
      <span
        style={
          Object {
            "width": "33%",
          }
        }
      >
        <div
          style={
            Object {
              "display": "flex",
            }
          }
        >
          foo
          <div
            className="mdc-tooltype"
          >
            <i
              className="material-icons"
              style={
                Object {
                  "color": "#ddd",
                  "paddingLeft": "16px",
                  "paddingTop": "12px",
                }
              }
            >
              help_outline
            </i>
            <span>
              One of below items is send to the user if this intent is activated.
            </span>
          </div>
        </div>
      </span>
      <span
        style={
          Object {
            "color": "rgba(0, 0, 0, 0.54)",
            "paddingLeft": "16px",
          }
        }
      />
    </div>
  </div>
  <div
    style={
      Object {
        "display": "block",
        "height": "100%",
        "overflow": "hidden",
        "transition": "height 150ms cubic-bezier(0.4, 0, 0.2, 1) 0ms",
      }
    }
  >
    <ul
      className="mdc-list"
      style={
        Object {
          "border": "1px solid #eee",
          "margin": "0 8px",
          "maxHeight": "18.07vh",
          "overflow": "auto",
        }
      }
    >
      <li
        className="selectableListItem onFocusAction mdl-list_action mdc-list-item"
        onClick={[Function]}
        onKeyPress={[Function]}
        role="menuitem"
        style={
          Object {
            "borderTop": "rgba(0,0,0,0.04) 1px solid",
            "color": "rgb(0, 0, 0)",
            "height": "100%",
            "padding": "4px 16px",
          }
        }
      >
        <div
          aria-label="Add an output response"
          className="contenteditable"
          id="ae_content"
          onClick={[Function]}
          onKeyDown={[Function]}
          onKeyPress={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          spellCheck={false}
          tabIndex={0}
        >
          <span>
            <span
              className={undefined}
              data="text"
              id="ae_start"
              onClick={[Function]}
              onInput={[Function]}
              style={
                Object {
                  "display": "inline-block",
                  "minHeight": "15px",
                  "padding": "0 4px",
                  "width": "100vw",
                }
              }
              tabIndex={1}
            />
          </span>
        </div>
        <i
          className="mdc-list-item__meta material-icons"
          href={null}
          onClick={[Function]}
          onKeyUp={[Function]}
          role="button"
          tabIndex="0"
        >
          delete
        </i>
      </li>
      <li
        className="selectableListItem onFocusAction mdl-list_action mdc-list-item"
        onClick={[Function]}
        onKeyPress={[Function]}
        role="menuitem"
        style={
          Object {
            "borderTop": "rgba(0,0,0,0.04) 1px solid",
            "color": "rgb(0, 0, 0)",
            "height": "100%",
            "padding": "4px 16px",
          }
        }
      >
        <div
          aria-label="Add an output response"
          className="contenteditable"
          id="ae_content"
          onClick={[Function]}
          onKeyDown={[Function]}
          onKeyPress={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          spellCheck={false}
          tabIndex={0}
        >
          <span>
            <span
              className={undefined}
              data="text"
              id="ae_start"
              onClick={[Function]}
              onInput={[Function]}
              style={
                Object {
                  "display": "inline-block",
                  "minHeight": "15px",
                  "padding": "0 4px",
                  "width": "100vw",
                }
              }
              tabIndex={1}
            />
          </span>
        </div>
        <i
          className="mdc-list-item__meta material-icons"
          href={null}
          onClick={[Function]}
          onKeyUp={[Function]}
          role="button"
          tabIndex="0"
        >
          delete
        </i>
      </li>
      <li
        className="selectableListItem onFocusAction mdl-list_action mdc-list-item"
        onClick={[Function]}
        onKeyPress={[Function]}
        role="menuitem"
        style={
          Object {
            "borderTop": "rgba(0,0,0,0.04) 1px solid",
            "color": "rgb(0, 0, 0)",
            "height": "100%",
            "padding": "4px 16px",
          }
        }
      >
        <div
          aria-label="Add an output response"
          className="contenteditable"
          id="ae_content"
          onClick={[Function]}
          onKeyDown={[Function]}
          onKeyPress={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          spellCheck={false}
          tabIndex={0}
        >
          <span>
            <span
              className={undefined}
              data="text"
              id="ae_start"
              onClick={[Function]}
              onInput={[Function]}
              style={
                Object {
                  "display": "inline-block",
                  "minHeight": "15px",
                  "padding": "0 4px",
                  "width": "100vw",
                }
              }
              tabIndex={1}
            />
          </span>
        </div>
        <i
          className="mdc-list-item__meta material-icons"
          href={null}
          onClick={[Function]}
          onKeyUp={[Function]}
          role="button"
          tabIndex="0"
        >
          delete
        </i>
      </li>
      <li
        className="selectableListItem onFocusAction mdl-list_action mdc-list-item"
        onClick={[Function]}
        onKeyPress={[Function]}
        role="menuitem"
        style={
          Object {
            "borderTop": "rgba(0,0,0,0.04) 1px solid",
            "color": "rgb(0, 0, 0)",
            "height": "100%",
            "padding": "4px 16px",
          }
        }
      >
        <div
          aria-label="Add an output response"
          className="contenteditable"
          id="ae_content"
          onClick={[Function]}
          onKeyDown={[Function]}
          onKeyPress={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          spellCheck={false}
          tabIndex={0}
        >
          <span>
            <span
              className={undefined}
              data="text"
              id="ae_start"
              onClick={[Function]}
              onInput={[Function]}
              style={
                Object {
                  "display": "inline-block",
                  "minHeight": "15px",
                  "padding": "0 4px",
                  "width": "100vw",
                }
              }
              tabIndex={1}
            />
          </span>
        </div>
        <i
          className="mdc-list-item__meta material-icons"
          href={null}
          onClick={[Function]}
          onKeyUp={[Function]}
          role="button"
          tabIndex="0"
        >
          delete
        </i>
      </li>
      <li
        className="selectableListItem onFocusAction mdl-list_action mdc-list-item"
        onClick={[Function]}
        onKeyPress={[Function]}
        role="menuitem"
        style={
          Object {
            "borderTop": "rgba(0,0,0,0.04) 1px solid",
            "color": "rgb(0, 0, 0)",
            "height": "100%",
            "padding": "4px 16px",
          }
        }
      >
        <div
          aria-label="Add an output response"
          className="contenteditable"
          id="ae_content"
          onClick={[Function]}
          onKeyDown={[Function]}
          onKeyPress={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          spellCheck={false}
          tabIndex={0}
        >
          <span>
            <span
              className={undefined}
              data="text"
              id="ae_start"
              onClick={[Function]}
              onInput={[Function]}
              style={
                Object {
                  "display": "inline-block",
                  "minHeight": "15px",
                  "padding": "0 4px",
                  "width": "100vw",
                }
              }
              tabIndex={1}
            />
          </span>
        </div>
        <i
          className="mdc-list-item__meta material-icons"
          href={null}
          onClick={[Function]}
          onKeyUp={[Function]}
          role="button"
          tabIndex="0"
        >
          delete
        </i>
      </li>
      <li
        className="selectableListItem onFocusAction mdl-list_action mdc-list-item"
        onClick={[Function]}
        onKeyPress={[Function]}
        role="menuitem"
        style={
          Object {
            "borderTop": "rgba(0,0,0,0.04) 1px solid",
            "color": "rgb(0, 0, 0)",
            "height": "100%",
            "padding": "4px 16px",
          }
        }
      >
        <div
          aria-label="Add an output response"
          className="contenteditable"
          id="ae_content"
          onClick={[Function]}
          onKeyDown={[Function]}
          onKeyPress={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          spellCheck={false}
          tabIndex={0}
        >
          <span>
            <span
              className={undefined}
              data="text"
              id="ae_start"
              onClick={[Function]}
              onInput={[Function]}
              style={
                Object {
                  "display": "inline-block",
                  "minHeight": "15px",
                  "padding": "0 4px",
                  "width": "100vw",
                }
              }
              tabIndex={1}
            />
          </span>
        </div>
        <i
          className="mdc-list-item__meta material-icons"
          href={null}
          onClick={[Function]}
          onKeyUp={[Function]}
          role="button"
          tabIndex="0"
        >
          delete
        </i>
      </li>
      <li
        className="selectableListItem onFocusAction mdl-list_action mdc-list-item"
        onClick={[Function]}
        onKeyPress={[Function]}
        role="menuitem"
        style={
          Object {
            "borderTop": "rgba(0,0,0,0.04) 1px solid",
            "color": "rgb(0, 0, 0)",
            "height": "100%",
            "padding": "4px 16px",
          }
        }
      >
        <div
          aria-label="Add an output response"
          className="contenteditable"
          id="ae_content"
          onClick={[Function]}
          onKeyDown={[Function]}
          onKeyPress={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          spellCheck={false}
          tabIndex={0}
        >
          <span>
            <span
              className={undefined}
              data="text"
              id="ae_start"
              onClick={[Function]}
              onInput={[Function]}
              style={
                Object {
                  "display": "inline-block",
                  "minHeight": "15px",
                  "padding": "0 4px",
                  "width": "100vw",
                }
              }
              tabIndex={1}
            />
          </span>
        </div>
        <i
          className="mdc-list-item__meta material-icons"
          href={null}
          onClick={[Function]}
          onKeyUp={[Function]}
          role="button"
          tabIndex="0"
        >
          delete
        </i>
      </li>
    </ul>
    <li
      className="selectableListItem onFocusAction mdl-list_action mdc-list-item"
      onClick={[Function]}
      onKeyPress={[Function]}
      role="menuitem"
      style={
        Object {
          "border": "1px solid rgba(0, 0, 0, 0.2)",
          "color": "black",
          "margin": "0 8px",
          "minHeight": "40px",
        }
      }
    >
      <i
        aria-hidden="true"
        className="mdc-list-item__graphic material-icons"
      >
        chat_bubble_outline
      </i>
      <div
        aria-label="Add an output response"
        className="contenteditable"
        id="ae_content"
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        spellCheck={false}
        tabIndex={0}
      >
        <span>
          <span
            className={undefined}
            data="text"
            id="ae_start"
            onClick={[Function]}
            onInput={[Function]}
            style={
              Object {
                "display": "inline-block",
                "minHeight": "15px",
                "padding": "0 4px",
                "width": "100vw",
              }
            }
            tabIndex={1}
          />
        </span>
      </div>
      <div />
    </li>
  </div>
</div>
`;

exports[`components/actionsList can be rendered with array of actions typed as strings 1`] = `
<div
  className="mrb-sublist mdl-color--white"
  style={
    Object {
      "margin": "8px",
    }
  }
>
  <div
    className="mrb-subheader"
    onClick={[Function]}
    style={
      Object {
        "height": "64px",
        "paddingTop": "4px",
        "transition": "height 150ms cubic-bezier(0.4, 0, 0.2, 1) 0ms",
      }
    }
  >
    <div
      style={
        Object {
          "float": "right",
          "height": "48px",
          "width": "48px",
        }
      }
    >
      <i
        className="mrb-subheader-right material-icons"
        disabled={false}
        style={
          Object {
            "animation": null,
            "fontSize": "24px",
            "paddingTop": "8px",
            "textAlign": "center",
          }
        }
      >
        keyboard_arrow_up
      </i>
    </div>
    <div
      style={
        Object {
          "display": "flex",
        }
      }
    >
      <span
        style={
          Object {
            "width": "33%",
          }
        }
      >
        <div
          style={
            Object {
              "display": "flex",
            }
          }
        >
          foo
          <div
            className="mdc-tooltype"
          >
            <i
              className="material-icons"
              style={
                Object {
                  "color": "#ddd",
                  "paddingLeft": "16px",
                  "paddingTop": "12px",
                }
              }
            >
              help_outline
            </i>
            <span>
              One of below items is send to the user if this intent is activated.
            </span>
          </div>
        </div>
      </span>
      <span
        style={
          Object {
            "color": "rgba(0, 0, 0, 0.54)",
            "paddingLeft": "16px",
          }
        }
      />
    </div>
  </div>
  <div
    style={
      Object {
        "display": "block",
        "height": "100%",
        "overflow": "hidden",
        "transition": "height 150ms cubic-bezier(0.4, 0, 0.2, 1) 0ms",
      }
    }
  >
    <ul
      className="mdc-list"
      style={
        Object {
          "border": "1px solid #eee",
          "margin": "0 8px",
          "maxHeight": "18.07vh",
          "overflow": "auto",
        }
      }
    >
      <li
        className="selectableListItem onFocusAction mdl-list_action mdc-list-item"
        onClick={[Function]}
        onKeyPress={[Function]}
        role="menuitem"
        style={
          Object {
            "borderTop": "rgba(0,0,0,0.04) 1px solid",
            "color": "rgb(0, 0, 0)",
            "height": "100%",
            "padding": "4px 16px",
          }
        }
      >
        <div
          aria-label="Add an output response"
          className="contenteditable"
          id="ae_content"
          onClick={[Function]}
          onKeyDown={[Function]}
          onKeyPress={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          spellCheck={false}
          tabIndex={0}
        >
          <span>
            <span
              className={undefined}
              data="text"
              id="ae_0"
              onClick={[Function]}
              onInput={[Function]}
              style={
                Object {
                  "display": "inline-block",
                  "padding": "0 4px",
                }
              }
              tabIndex={1}
            >
              any
            </span>
          </span>
        </div>
        <i
          className="mdc-list-item__meta material-icons"
          href={null}
          onClick={[Function]}
          onKeyUp={[Function]}
          role="button"
          tabIndex="0"
        >
          delete
        </i>
      </li>
      <li
        className="selectableListItem onFocusAction mdl-list_action mdc-list-item"
        onClick={[Function]}
        onKeyPress={[Function]}
        role="menuitem"
        style={
          Object {
            "borderTop": "rgba(0,0,0,0.04) 1px solid",
            "color": "rgb(0, 0, 0)",
            "height": "100%",
            "padding": "4px 16px",
          }
        }
      >
        <div
          aria-label="Add an output response"
          className="contenteditable"
          id="ae_content"
          onClick={[Function]}
          onKeyDown={[Function]}
          onKeyPress={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          spellCheck={false}
          tabIndex={0}
        >
          <span>
            <span
              className={undefined}
              data="text"
              id="ae_0"
              onClick={[Function]}
              onInput={[Function]}
              style={
                Object {
                  "display": "inline-block",
                  "padding": "0 4px",
                }
              }
              tabIndex={1}
            >
              output_var
            </span>
          </span>
        </div>
        <i
          className="mdc-list-item__meta material-icons"
          href={null}
          onClick={[Function]}
          onKeyUp={[Function]}
          role="button"
          tabIndex="0"
        >
          delete
        </i>
      </li>
      <li
        className="selectableListItem onFocusAction mdl-list_action mdc-list-item"
        onClick={[Function]}
        onKeyPress={[Function]}
        role="menuitem"
        style={
          Object {
            "borderTop": "rgba(0,0,0,0.04) 1px solid",
            "color": "rgb(0, 0, 0)",
            "height": "100%",
            "padding": "4px 16px",
          }
        }
      >
        <div
          aria-label="Add an output response"
          className="contenteditable"
          id="ae_content"
          onClick={[Function]}
          onKeyDown={[Function]}
          onKeyPress={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          spellCheck={false}
          tabIndex={0}
        >
          <span>
            <span
              className={undefined}
              data="text"
              id="ae_0"
              onClick={[Function]}
              onInput={[Function]}
              style={
                Object {
                  "display": "inline-block",
                  "padding": "0 4px",
                }
              }
              tabIndex={1}
            >
              variable
            </span>
          </span>
        </div>
        <i
          className="mdc-list-item__meta material-icons"
          href={null}
          onClick={[Function]}
          onKeyUp={[Function]}
          role="button"
          tabIndex="0"
        >
          delete
        </i>
      </li>
      <li
        className="selectableListItem onFocusAction mdl-list_action mdc-list-item"
        onClick={[Function]}
        onKeyPress={[Function]}
        role="menuitem"
        style={
          Object {
            "borderTop": "rgba(0,0,0,0.04) 1px solid",
            "color": "rgb(0, 0, 0)",
            "height": "100%",
            "padding": "4px 16px",
          }
        }
      >
        <div
          aria-label="Add an output response"
          className="contenteditable"
          id="ae_content"
          onClick={[Function]}
          onKeyDown={[Function]}
          onKeyPress={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          spellCheck={false}
          tabIndex={0}
        >
          <span>
            <span
              className={undefined}
              data="text"
              id="ae_0"
              onClick={[Function]}
              onInput={[Function]}
              style={
                Object {
                  "display": "inline-block",
                  "padding": "0 4px",
                }
              }
              tabIndex={1}
            >
              br
            </span>
          </span>
        </div>
        <i
          className="mdc-list-item__meta material-icons"
          href={null}
          onClick={[Function]}
          onKeyUp={[Function]}
          role="button"
          tabIndex="0"
        >
          delete
        </i>
      </li>
      <li
        className="selectableListItem onFocusAction mdl-list_action mdc-list-item"
        onClick={[Function]}
        onKeyPress={[Function]}
        role="menuitem"
        style={
          Object {
            "borderTop": "rgba(0,0,0,0.04) 1px solid",
            "color": "rgb(0, 0, 0)",
            "height": "100%",
            "padding": "4px 16px",
          }
        }
      >
        <div
          aria-label="Add an output response"
          className="contenteditable"
          id="ae_content"
          onClick={[Function]}
          onKeyDown={[Function]}
          onKeyPress={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          spellCheck={false}
          tabIndex={0}
        >
          <span>
            <span
              className={undefined}
              data="text"
              id="ae_0"
              onClick={[Function]}
              onInput={[Function]}
              style={
                Object {
                  "display": "inline-block",
                  "padding": "0 4px",
                }
              }
              tabIndex={1}
            >
              button
            </span>
          </span>
        </div>
        <i
          className="mdc-list-item__meta material-icons"
          href={null}
          onClick={[Function]}
          onKeyUp={[Function]}
          role="button"
          tabIndex="0"
        >
          delete
        </i>
      </li>
      <li
        className="selectableListItem onFocusAction mdl-list_action mdc-list-item"
        onClick={[Function]}
        onKeyPress={[Function]}
        role="menuitem"
        style={
          Object {
            "borderTop": "rgba(0,0,0,0.04) 1px solid",
            "color": "rgb(0, 0, 0)",
            "height": "100%",
            "padding": "4px 16px",
          }
        }
      >
        <div
          aria-label="Add an output response"
          className="contenteditable"
          id="ae_content"
          onClick={[Function]}
          onKeyDown={[Function]}
          onKeyPress={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          spellCheck={false}
          tabIndex={0}
        >
          <span>
            <span
              className={undefined}
              data="text"
              id="ae_0"
              onClick={[Function]}
              onInput={[Function]}
              style={
                Object {
                  "display": "inline-block",
                  "padding": "0 4px",
                }
              }
              tabIndex={1}
            >
              trash
            </span>
          </span>
        </div>
        <i
          className="mdc-list-item__meta material-icons"
          href={null}
          onClick={[Function]}
          onKeyUp={[Function]}
          role="button"
          tabIndex="0"
        >
          delete
        </i>
      </li>
      <li
        className="selectableListItem onFocusAction mdl-list_action mdc-list-item"
        onClick={[Function]}
        onKeyPress={[Function]}
        role="menuitem"
        style={
          Object {
            "borderTop": "rgba(0,0,0,0.04) 1px solid",
            "color": "rgb(0, 0, 0)",
            "height": "100%",
            "padding": "4px 16px",
          }
        }
      >
        <div
          aria-label="Add an output response"
          className="contenteditable"
          id="ae_content"
          onClick={[Function]}
          onKeyDown={[Function]}
          onKeyPress={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          spellCheck={false}
          tabIndex={0}
        >
          <span>
            <span
              className={undefined}
              data="text"
              id="ae_0"
              onClick={[Function]}
              onInput={[Function]}
              style={
                Object {
                  "display": "inline-block",
                  "padding": "0 4px",
                }
              }
              tabIndex={1}
            >
              bar
            </span>
          </span>
        </div>
        <i
          className="mdc-list-item__meta material-icons"
          href={null}
          onClick={[Function]}
          onKeyUp={[Function]}
          role="button"
          tabIndex="0"
        >
          delete
        </i>
      </li>
    </ul>
    <li
      className="selectableListItem onFocusAction mdl-list_action mdc-list-item"
      onClick={[Function]}
      onKeyPress={[Function]}
      role="menuitem"
      style={
        Object {
          "border": "1px solid rgba(0, 0, 0, 0.2)",
          "color": "black",
          "margin": "0 8px",
          "minHeight": "40px",
        }
      }
    >
      <i
        aria-hidden="true"
        className="mdc-list-item__graphic material-icons"
      >
        chat_bubble_outline
      </i>
      <div
        aria-label="Add an output response"
        className="contenteditable"
        id="ae_content"
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        spellCheck={false}
        tabIndex={0}
      >
        <span>
          <span
            className={undefined}
            data="text"
            id="ae_start"
            onClick={[Function]}
            onInput={[Function]}
            style={
              Object {
                "display": "inline-block",
                "minHeight": "15px",
                "padding": "0 4px",
                "width": "100vw",
              }
            }
            tabIndex={1}
          />
        </span>
      </div>
      <div />
    </li>
  </div>
</div>
`;

exports[`components/actionsList can have an unique id 1`] = `
<div
  className="mrb-sublist mdl-color--white"
  style={
    Object {
      "margin": "8px",
    }
  }
>
  <div
    className="mrb-subheader"
    onClick={[Function]}
    style={
      Object {
        "height": "64px",
        "paddingTop": "4px",
        "transition": "height 150ms cubic-bezier(0.4, 0, 0.2, 1) 0ms",
      }
    }
  >
    <div
      style={
        Object {
          "float": "right",
          "height": "48px",
          "width": "48px",
        }
      }
    >
      <i
        className="mrb-subheader-right material-icons"
        disabled={false}
        style={
          Object {
            "animation": null,
            "fontSize": "24px",
            "paddingTop": "8px",
            "textAlign": "center",
          }
        }
      >
        keyboard_arrow_up
      </i>
    </div>
    <div
      style={
        Object {
          "display": "flex",
        }
      }
    >
      <span
        style={
          Object {
            "width": "33%",
          }
        }
      >
        <div
          style={
            Object {
              "display": "flex",
            }
          }
        >
          foobar
          <div
            className="mdc-tooltype"
          >
            <i
              className="material-icons"
              style={
                Object {
                  "color": "#ddd",
                  "paddingLeft": "16px",
                  "paddingTop": "12px",
                }
              }
            >
              help_outline
            </i>
            <span>
              One of below items is send to the user if this intent is activated.
            </span>
          </div>
        </div>
      </span>
      <span
        style={
          Object {
            "color": "rgba(0, 0, 0, 0.54)",
            "paddingLeft": "16px",
          }
        }
      />
    </div>
  </div>
  <div
    style={
      Object {
        "display": "block",
        "height": "100%",
        "overflow": "hidden",
        "transition": "height 150ms cubic-bezier(0.4, 0, 0.2, 1) 0ms",
      }
    }
  >
    <ul
      className="mdc-list"
    />
    <li
      className="selectableListItem onFocusAction mdl-list_action mdc-list-item"
      onClick={[Function]}
      onKeyPress={[Function]}
      role="menuitem"
      style={
        Object {
          "border": "1px solid rgba(0, 0, 0, 0.2)",
          "color": "black",
          "margin": "0 8px",
          "minHeight": "40px",
        }
      }
    >
      <i
        aria-hidden="true"
        className="mdc-list-item__graphic material-icons"
      >
        chat_bubble_outline
      </i>
      <div
        aria-label="Add an output response"
        className="contenteditable"
        id="ae_content"
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        spellCheck={false}
        tabIndex={0}
      >
        <span>
          <span
            className={undefined}
            data="text"
            id="ae_start"
            onClick={[Function]}
            onInput={[Function]}
            style={
              Object {
                "display": "inline-block",
                "minHeight": "15px",
                "padding": "0 4px",
                "width": "100vw",
              }
            }
            tabIndex={1}
          />
        </span>
      </div>
      <div />
    </li>
  </div>
</div>
`;

exports[`components/actionsList can have different behavior on action 1`] = `
<div
  className="mrb-sublist mdl-color--white"
  style={
    Object {
      "margin": "8px",
    }
  }
>
  <div
    className="mrb-subheader"
    onClick={[Function]}
    style={
      Object {
        "height": "64px",
        "paddingTop": "4px",
        "transition": "height 150ms cubic-bezier(0.4, 0, 0.2, 1) 0ms",
      }
    }
  >
    <div
      style={
        Object {
          "float": "right",
          "height": "48px",
          "width": "48px",
        }
      }
    >
      <i
        className="mrb-subheader-right material-icons"
        disabled={false}
        style={
          Object {
            "animation": null,
            "fontSize": "24px",
            "paddingTop": "8px",
            "textAlign": "center",
          }
        }
      >
        keyboard_arrow_up
      </i>
    </div>
    <div
      style={
        Object {
          "display": "flex",
        }
      }
    >
      <span
        style={
          Object {
            "width": "33%",
          }
        }
      >
        <div
          style={
            Object {
              "display": "flex",
            }
          }
        >
          foobar
          <div
            className="mdc-tooltype"
          >
            <i
              className="material-icons"
              style={
                Object {
                  "color": "#ddd",
                  "paddingLeft": "16px",
                  "paddingTop": "12px",
                }
              }
            >
              help_outline
            </i>
            <span>
              One of below items is send to the user if this intent is activated.
            </span>
          </div>
        </div>
      </span>
      <span
        style={
          Object {
            "color": "rgba(0, 0, 0, 0.54)",
            "paddingLeft": "16px",
          }
        }
      />
    </div>
  </div>
  <div
    style={
      Object {
        "display": "block",
        "height": "100%",
        "overflow": "hidden",
        "transition": "height 150ms cubic-bezier(0.4, 0, 0.2, 1) 0ms",
      }
    }
  >
    <ul
      className="mdc-list"
    />
    <li
      className="selectableListItem onFocusAction mdl-list_action mdc-list-item"
      onClick={[Function]}
      onKeyPress={[Function]}
      role="menuitem"
      style={
        Object {
          "border": "1px solid rgba(0, 0, 0, 0.2)",
          "color": "black",
          "margin": "0 8px",
          "minHeight": "40px",
        }
      }
    >
      <i
        aria-hidden="true"
        className="mdc-list-item__graphic material-icons"
      >
        chat_bubble_outline
      </i>
      <div
        aria-label="Add an output response"
        className="contenteditable"
        id="ae_content"
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        spellCheck={false}
        tabIndex={0}
      >
        <span>
          <span
            className={undefined}
            data="text"
            id="ae_start"
            onClick={[Function]}
            onInput={[Function]}
            style={
              Object {
                "display": "inline-block",
                "minHeight": "15px",
                "padding": "0 4px",
                "width": "100vw",
              }
            }
            tabIndex={1}
          />
        </span>
      </div>
      <div />
    </li>
  </div>
</div>
`;

exports[`components/actionsList can have different behavior on drop 1`] = `
<div
  className="mrb-sublist mdl-color--white"
  style={
    Object {
      "margin": "8px",
    }
  }
>
  <div
    className="mrb-subheader"
    onClick={[Function]}
    style={
      Object {
        "height": "64px",
        "paddingTop": "4px",
        "transition": "height 150ms cubic-bezier(0.4, 0, 0.2, 1) 0ms",
      }
    }
  >
    <div
      style={
        Object {
          "float": "right",
          "height": "48px",
          "width": "48px",
        }
      }
    >
      <i
        className="mrb-subheader-right material-icons"
        disabled={false}
        style={
          Object {
            "animation": null,
            "fontSize": "24px",
            "paddingTop": "8px",
            "textAlign": "center",
          }
        }
      >
        keyboard_arrow_up
      </i>
    </div>
    <div
      style={
        Object {
          "display": "flex",
        }
      }
    >
      <span
        style={
          Object {
            "width": "33%",
          }
        }
      >
        <div
          style={
            Object {
              "display": "flex",
            }
          }
        >
          foobar
          <div
            className="mdc-tooltype"
          >
            <i
              className="material-icons"
              style={
                Object {
                  "color": "#ddd",
                  "paddingLeft": "16px",
                  "paddingTop": "12px",
                }
              }
            >
              help_outline
            </i>
            <span>
              One of below items is send to the user if this intent is activated.
            </span>
          </div>
        </div>
      </span>
      <span
        style={
          Object {
            "color": "rgba(0, 0, 0, 0.54)",
            "paddingLeft": "16px",
          }
        }
      />
    </div>
  </div>
  <div
    style={
      Object {
        "display": "block",
        "height": "100%",
        "overflow": "hidden",
        "transition": "height 150ms cubic-bezier(0.4, 0, 0.2, 1) 0ms",
      }
    }
  >
    <ul
      className="mdc-list"
    />
    <li
      className="selectableListItem onFocusAction mdl-list_action mdc-list-item"
      onClick={[Function]}
      onKeyPress={[Function]}
      role="menuitem"
      style={
        Object {
          "border": "1px solid rgba(0, 0, 0, 0.2)",
          "color": "black",
          "margin": "0 8px",
          "minHeight": "40px",
        }
      }
    >
      <i
        aria-hidden="true"
        className="mdc-list-item__graphic material-icons"
      >
        chat_bubble_outline
      </i>
      <div
        aria-label="Add an output response"
        className="contenteditable"
        id="ae_content"
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        spellCheck={false}
        tabIndex={0}
      >
        <span>
          <span
            className={undefined}
            data="text"
            id="ae_start"
            onClick={[Function]}
            onInput={[Function]}
            style={
              Object {
                "display": "inline-block",
                "minHeight": "15px",
                "padding": "0 4px",
                "width": "100vw",
              }
            }
            tabIndex={1}
          />
        </span>
      </div>
      <div />
    </li>
  </div>
</div>
`;

exports[`components/actionsList can have different behavior on edit 1`] = `
<div
  className="mrb-sublist mdl-color--white"
  style={
    Object {
      "margin": "8px",
    }
  }
>
  <div
    className="mrb-subheader"
    onClick={[Function]}
    style={
      Object {
        "height": "64px",
        "paddingTop": "4px",
        "transition": "height 150ms cubic-bezier(0.4, 0, 0.2, 1) 0ms",
      }
    }
  >
    <div
      style={
        Object {
          "float": "right",
          "height": "48px",
          "width": "48px",
        }
      }
    >
      <i
        className="mrb-subheader-right material-icons"
        disabled={false}
        style={
          Object {
            "animation": null,
            "fontSize": "24px",
            "paddingTop": "8px",
            "textAlign": "center",
          }
        }
      >
        keyboard_arrow_up
      </i>
    </div>
    <div
      style={
        Object {
          "display": "flex",
        }
      }
    >
      <span
        style={
          Object {
            "width": "33%",
          }
        }
      >
        <div
          style={
            Object {
              "display": "flex",
            }
          }
        >
          foobar
          <div
            className="mdc-tooltype"
          >
            <i
              className="material-icons"
              style={
                Object {
                  "color": "#ddd",
                  "paddingLeft": "16px",
                  "paddingTop": "12px",
                }
              }
            >
              help_outline
            </i>
            <span>
              One of below items is send to the user if this intent is activated.
            </span>
          </div>
        </div>
      </span>
      <span
        style={
          Object {
            "color": "rgba(0, 0, 0, 0.54)",
            "paddingLeft": "16px",
          }
        }
      />
    </div>
  </div>
  <div
    style={
      Object {
        "display": "block",
        "height": "100%",
        "overflow": "hidden",
        "transition": "height 150ms cubic-bezier(0.4, 0, 0.2, 1) 0ms",
      }
    }
  >
    <ul
      className="mdc-list"
    />
    <li
      className="selectableListItem onFocusAction mdl-list_action mdc-list-item"
      onClick={[Function]}
      onKeyPress={[Function]}
      role="menuitem"
      style={
        Object {
          "border": "1px solid rgba(0, 0, 0, 0.2)",
          "color": "black",
          "margin": "0 8px",
          "minHeight": "40px",
        }
      }
    >
      <i
        aria-hidden="true"
        className="mdc-list-item__graphic material-icons"
      >
        chat_bubble_outline
      </i>
      <div
        aria-label="Add an output response"
        className="contenteditable"
        id="ae_content"
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        spellCheck={false}
        tabIndex={0}
      >
        <span>
          <span
            className={undefined}
            data="text"
            id="ae_start"
            onClick={[Function]}
            onInput={[Function]}
            style={
              Object {
                "display": "inline-block",
                "minHeight": "15px",
                "padding": "0 4px",
                "width": "100vw",
              }
            }
            tabIndex={1}
          />
        </span>
      </div>
      <div />
    </li>
  </div>
</div>
`;

exports[`components/actionsList can have different behavior on select 1`] = `
<div
  className="mrb-sublist mdl-color--white"
  style={
    Object {
      "margin": "8px",
    }
  }
>
  <div
    className="mrb-subheader"
    onClick={[Function]}
    style={
      Object {
        "height": "64px",
        "paddingTop": "4px",
        "transition": "height 150ms cubic-bezier(0.4, 0, 0.2, 1) 0ms",
      }
    }
  >
    <div
      style={
        Object {
          "float": "right",
          "height": "48px",
          "width": "48px",
        }
      }
    >
      <i
        className="mrb-subheader-right material-icons"
        disabled={false}
        style={
          Object {
            "animation": null,
            "fontSize": "24px",
            "paddingTop": "8px",
            "textAlign": "center",
          }
        }
      >
        keyboard_arrow_up
      </i>
    </div>
    <div
      style={
        Object {
          "display": "flex",
        }
      }
    >
      <span
        style={
          Object {
            "width": "33%",
          }
        }
      >
        <div
          style={
            Object {
              "display": "flex",
            }
          }
        >
          foobar
          <div
            className="mdc-tooltype"
          >
            <i
              className="material-icons"
              style={
                Object {
                  "color": "#ddd",
                  "paddingLeft": "16px",
                  "paddingTop": "12px",
                }
              }
            >
              help_outline
            </i>
            <span>
              One of below items is send to the user if this intent is activated.
            </span>
          </div>
        </div>
      </span>
      <span
        style={
          Object {
            "color": "rgba(0, 0, 0, 0.54)",
            "paddingLeft": "16px",
          }
        }
      />
    </div>
  </div>
  <div
    style={
      Object {
        "display": "block",
        "height": "100%",
        "overflow": "hidden",
        "transition": "height 150ms cubic-bezier(0.4, 0, 0.2, 1) 0ms",
      }
    }
  >
    <ul
      className="mdc-list"
    />
    <li
      className="selectableListItem onFocusAction mdl-list_action mdc-list-item"
      onClick={[Function]}
      onKeyPress={[Function]}
      role="menuitem"
      style={
        Object {
          "border": "1px solid rgba(0, 0, 0, 0.2)",
          "color": "black",
          "margin": "0 8px",
          "minHeight": "40px",
        }
      }
    >
      <i
        aria-hidden="true"
        className="mdc-list-item__graphic material-icons"
      >
        chat_bubble_outline
      </i>
      <div
        aria-label="Add an output response"
        className="contenteditable"
        id="ae_content"
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        spellCheck={false}
        tabIndex={0}
      >
        <span>
          <span
            className={undefined}
            data="text"
            id="ae_start"
            onClick={[Function]}
            onInput={[Function]}
            style={
              Object {
                "display": "inline-block",
                "minHeight": "15px",
                "padding": "0 4px",
                "width": "100vw",
              }
            }
            tabIndex={1}
          />
        </span>
      </div>
      <div />
    </li>
  </div>
</div>
`;

exports[`components/actionsList renders correctly 1`] = `
<div
  className="mrb-sublist mdl-color--white"
  style={
    Object {
      "margin": "8px",
    }
  }
>
  <div
    className="mrb-subheader"
    onClick={[Function]}
    style={
      Object {
        "height": "64px",
        "paddingTop": "4px",
        "transition": "height 150ms cubic-bezier(0.4, 0, 0.2, 1) 0ms",
      }
    }
  >
    <div
      style={
        Object {
          "float": "right",
          "height": "48px",
          "width": "48px",
        }
      }
    >
      <i
        className="mrb-subheader-right material-icons"
        disabled={false}
        style={
          Object {
            "animation": null,
            "fontSize": "24px",
            "paddingTop": "8px",
            "textAlign": "center",
          }
        }
      >
        keyboard_arrow_up
      </i>
    </div>
    <div
      style={
        Object {
          "display": "flex",
        }
      }
    >
      <span
        style={
          Object {
            "width": "33%",
          }
        }
      >
        <div
          style={
            Object {
              "display": "flex",
            }
          }
        >
          foobar
          <div
            className="mdc-tooltype"
          >
            <i
              className="material-icons"
              style={
                Object {
                  "color": "#ddd",
                  "paddingLeft": "16px",
                  "paddingTop": "12px",
                }
              }
            >
              help_outline
            </i>
            <span>
              One of below items is send to the user if this intent is activated.
            </span>
          </div>
        </div>
      </span>
      <span
        style={
          Object {
            "color": "rgba(0, 0, 0, 0.54)",
            "paddingLeft": "16px",
          }
        }
      />
    </div>
  </div>
  <div
    style={
      Object {
        "display": "block",
        "height": "100%",
        "overflow": "hidden",
        "transition": "height 150ms cubic-bezier(0.4, 0, 0.2, 1) 0ms",
      }
    }
  >
    <ul
      className="mdc-list"
    />
    <li
      className="selectableListItem onFocusAction mdl-list_action mdc-list-item"
      onClick={[Function]}
      onKeyPress={[Function]}
      role="menuitem"
      style={
        Object {
          "border": "1px solid rgba(0, 0, 0, 0.2)",
          "color": "black",
          "margin": "0 8px",
          "minHeight": "40px",
        }
      }
    >
      <i
        aria-hidden="true"
        className="mdc-list-item__graphic material-icons"
      >
        chat_bubble_outline
      </i>
      <div
        aria-label="Add an output response"
        className="contenteditable"
        id="ae_content"
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        spellCheck={false}
        tabIndex={0}
      >
        <span>
          <span
            className={undefined}
            data="text"
            id="ae_start"
            onClick={[Function]}
            onInput={[Function]}
            style={
              Object {
                "display": "inline-block",
                "minHeight": "15px",
                "padding": "0 4px",
                "width": "100vw",
              }
            }
            tabIndex={1}
          />
        </span>
      </div>
      <div />
    </li>
  </div>
</div>
`;
